--- a/Projects/ProCrm/templates/base.html
+++ b/Projects/ProCrm/templates/base.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
 
@@ -8,7 +8,7 @@
     <meta name="description" content="Flat, Clean, Responsive, admin template built with bootstrap 3">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
-    <title>Cameo | Responsive Admin Dashboard</title>
+    <title>ProCRM</title>
 
     <script type="text/javascript">
         //<![CDATA[
@@ -42,7 +42,7 @@
                     }
                 });
                 ! function(a, b) {
-                    a = document.createElement("script"), b = document.getElementsByTagName("script")[0], a.async = !0, a.src = "js/cloudflare.min.js", b.parentNode.insertBefore(a, b)
+                    a = document.createElement("script"), b = document.getElementsByTagName("script")[0], a.async = !0, a.src = "/static/js/cloudflare.min.js", b.parentNode.insertBefore(a, b)
                 }()
             }
         } catch (e) {};
@@ -53,7 +53,8 @@
 
 
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+{#    <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">#}
     <link rel="stylesheet" href="/static/css/animate.min.css">
 
     <link rel="stylesheet" href="/static/css/panel.css">
@@ -154,8 +155,8 @@
                 </select>
             </div><small class="ucase">This Panel is for demo purposes only</small>
         </div>
-        <div class="ob_toggle bg-color"><span class="fa fa-cog"></span>
-        </div>
+{#        <div class="ob_toggle bg-color"><span class="fa fa-cog"></span>#}
+{#        </div>#}
     </div>
     <div class="app">
 
@@ -165,7 +166,7 @@
                 <a href="index.html" class="navbar-brand text-white">
                     <i class="fa fa-stop mg-r-sm"></i>
                     <span class="heading-font">
-Cameo<b>ADMIN</b>
+Personal<b>CRM</b>
 </span>
                 </a>
             </div>
@@ -174,13 +175,13 @@ Cameo<b>ADMIN</b>
                     <button class="btn no-border no-margin bg-none no-pd-l" type="submit">
                         <i class="fa fa-search"></i>
                     </button>
-                    <input type="text" class="form-control no-border no-padding search" placeholder="Search Workspace">
+                    <input type="text" class="form-control no-border no-padding search" placeholder="search">
                 </div>
             </form>
             <ul class="nav navbar-nav navbar-right off-right">
                 <li class="hidden-xs">
-                    <a href="javascript:;">
-+Gerald Theodore Morris
+                    <a href="javascript:;" id="username">
+{{ request.user }}
 </a>
                 </li>
                 <li class="notifications dropdown hidden-xs">
@@ -284,7 +285,7 @@ Cameo<b>ADMIN</b>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="signin.html">Logout</a>
+                            <a href="/logout.html">Logout</a>
                         </li>
                     </ul>
                 </li>
@@ -296,254 +297,7 @@ Cameo<b>ADMIN</b>
             <aside class="sidebar canvas-left">
 
                 <nav class="main-navigation">
-                    <ul>
-                        <li>
-                            <a href="index.html">
-                                <i class="fa fa-coffee"></i>
-                                <span>Framework</span>
-                            </a>
-                        </li>
-                        <li class="dropdown show-on-hover">
-                            <a href="javascript:;" data-toggle="dropdown">
-                                <i class="fa fa-ellipsis-h"></i>
-                                <span>UI Elements</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="buttons.html">
-                                        <span>Buttons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="forms.html">
-                                        <span>Forms</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="tables.html">
-                                        <span>Tables</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="calendar.html">
-                                        <span>Calendar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="components.html">
-                                        <span>Components</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="sortable.html">
-                                        <span>Sortable</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="chart.html">
-                                        <span>Charts</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="editor.html">
-                                        <span>Editor</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="maps.html">
-                                        <span>Google Maps</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="vector.html">
-                                        <span>Vector Maps</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="widgets.html">
-                                        <span>Widgets</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="icons.html">
-                                        <span>Icons</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="grid.html">
-                                        <span>Grid</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown show-on-hover">
-                            <a href="javascript:;" data-toggle="dropdown">
-                                <i class="fa fa-tasks"></i>
-                                <span>Layouts</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="boxed.html">
-                                        <span>Boxed</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="horizontal.html">
-                                        <span>Horizontal menu</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="horizontal_boxed.html">
-                                        <span>Horizontal Boxed</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="small-sidebar.html">
-                                        <span>Small sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="right-sidebar.html">
-                                        <span>Right Sidebar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="right-sidebar-collapsible.html">
-                                        <span>Right Sidebar collapsible</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="both.html">
-                                        <span>Mixed menus</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="collapsible.html">
-                                        <span>Collapsible Menu</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="footer.html">
-                                        <span>With Footer</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="mail.html">
-                                <div class="badge bg-none pull-right">8</div>
-                                <i class="fa fa-envelope"></i>
-                                <span>Mailbox</span>
-                            </a>
-                        </li>
-                        <li class="dropdown active show-on-hover">
-                            <a href="javascript:;" data-toggle="dropdown">
-                                <i class="fa fa-file"></i>
-                                <span>Pages</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="tasks.html">
-                                        <span>Tasks</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="profile.html">
-                                        <span>Profile</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="invoice.html">
-                                        <span>Invoice</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="gallery.html">
-                                        <span>Gallery</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="signin.html">
-                                        <span>Signin</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="signup.html">
-                                        <span>Signup</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="lock.html">
-                                        <span>Lock Screen</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="404.html">
-                                        <span>404 Page</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="500.html">
-                                        <span>500 Page</span>
-                                    </a>
-                                </li>
-                                <li class="active">
-                                    <a href="blank.html">
-                                        <span>Blank</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown show-on-hover">
-                            <a href="javascript:;" data-toggle="dropdown">
-                                <i class="fa fa-gift"></i>
-                                <span>Extras</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="pricing.html">
-                                        <span>Pricing Tables</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="mail_alt.html">
-                                        <span>Mail Alt.</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="email.html">
-                                        <span>Email Template</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="subscription.html">
-                                        <span>Subscription</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="timeline.html">
-                                        <span>Timeline</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="feed.html">
-                                        <span>Feed</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="chat.html">
-                                        <span>Chat</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="changelog.html">
-                                <i class="fa fa-info"></i>
-                                <span>Change log</span>
-                            </a>
-                        </li>
-                    </ul>
+                    {% block side-bar-menus %}{% endblock %}
                 </nav>
 
 
@@ -575,6 +329,7 @@ Cameo<b>ADMIN</b>
             <section class="main-content">
 
                 <div class="content-wrap">
+                    {% block body %}...{% endblock %}
                 </div>
 
             </section>
@@ -597,6 +352,13 @@ Cameo<b>ADMIN</b>
     <script src="/static/js/main.js"></script>
 
     <script src="/static/js/panel.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $(".main-navigation a[href='{{ request.path }}']").parent().addClass("active");
+
+        })
+    </script>
 </body>
 
 </html>
