--- a/Projects/xxdCmdb/web/templates/layout/_laytask.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laytask.html
@@ -20,12 +20,16 @@
 <div class="pg-body">
     <div class="menu">
         <a id="menu_asset" class="menu-item" href="/task_virtual.html">
-            <i class="fa fa-connectdevelop" aria-hidden="true"></i>
-            <span>虚拟机装机</span>
+            <i class="fa fa-vimeo" aria-hidden="true"></i>
+            <span>KVM</span>
+        </a>
+        <a id="menu_docker" class="menu-item" href="/docker_index.html">
+            <i class="fa fa-mixcloud" aria-hidden="true"></i>
+            <span>Docker</span>
         </a>
         <a id="menu_user_profile" class="menu-item" href="#">
-            <i class="fa fa-cogs" aria-hidden="true"></i>
-            <span>物理机装机</span>
+            <i class="fa fa-server" aria-hidden="true"></i>
+            <span>物理机</span>
         </a>
         <a class="menu-item" href="#">
             <i class="fa fa-desktop" aria-hidden="true"></i>
